--- a/style.css
+++ b/style.css
@@ -1263,6 +1263,306 @@ section#calendar .wrapper .visit span {
   position: relative;
   margin-left: 2px;
 }
+section#search {
+  padding-top: 30px;
+}
+section#search .window {
+  padding: 15px;
+  text-align: left;
+  position: relative;
+}
+section#search input {
+  margin: auto;
+  width: 100%;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: #f4f4f4;
+  border: 1px solid #e6e6e4;
+  color: #717171;
+}
+section#search .layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  text-align: center;
+}
+section#search .filter {
+  top: 100px;
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  background: #ffffff;
+  width: 80%;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  border: 1px solid #e6e6e4;
+  padding: 10px;
+}
+section#search .hidden {
+  width: 330px;
+  height: 35px;
+  top: 15px;
+}
+section#search span.title {
+  text-align: left;
+  font-weight: 600;
+  float: left;
+  margin-bottom: 15px;
+  height: 33px;
+  line-height: 33px;
+}
+section#search .hide {
+  float: right;
+}
+section#search ul.field {
+  float: left;
+  width: 100%;
+}
+section#search ul.field li {
+  display: inline-block;
+  width: 50%;
+  text-align: center;
+  float: left;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+section#search ul.field li:nth-child(2n) {
+  padding-left: 10px;
+}
+section#search ul.field label,
+section#search ul.field fieldset {
+  float: left;
+  width: 100%;
+  text-align: left;
+  margin: 4px 0;
+  color: #717171;
+  font-weight: 300;
+}
+section#search ul.field li.time input {
+  width: 85%;
+}
+section#search ul.field li.time i {
+  font-size: 28px;
+  position: relative;
+  float: right;
+  top: 5px;
+  margin-right: 5px;
+  color: #0167b9;
+}
+section#search ul.field li.full {
+  width: 100%;
+}
+section#search ul.action {
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+  border: 0;
+  margin: 10px auto auto;
+  padding: 10px 0 0;
+  border-top: 1px solid #e6e6e4;
+}
+section#search ul.action li {
+  display: inline-block;
+  float: none;
+  width: auto;
+  margin: 0 8px;
+}
+section#search ul.action .close-window {
+  background: #717171;
+}
+section#search .row.result {
+  margin-top: 20px;
+}
+section#search .row.result .window {
+  padding: 0 15px;
+}
+section#search ul.result {
+  float: left;
+  width: 100%;
+}
+section#search ul.result li {
+  float: left;
+  width: 100%;
+  display: inline-block;
+  position: relative;
+  border-top: 1px solid #e6e6e4;
+  padding: 10px 0;
+}
+section#search ul.result li:first-child {
+  border-top: 0;
+}
+section#search ul.result .box {
+  display: inline-block;
+  width: 33%;
+  border-left: 1px dotted #e6e6e4;
+  padding: 5px 0 5px 15px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  vertical-align: top;
+  min-height: 185px;
+  position: relative;
+}
+section#search ul.result .box:first-child {
+  border-left: 0;
+  padding-left: 0;
+}
+section#search ul.result .box i {
+  font-size: 18px;
+  margin-right: 6px;
+  color: #004579;
+}
+section#search ul.result .box a {
+  color: #004579;
+  text-decoration: none;
+}
+section#search ul.result .pic {
+  float: left;
+  width: 25%;
+}
+section#search ul.result .images {
+  float: left;
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  background: #f4f4f4;
+  padding: 3px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  max-width: 100px;
+  position: relative;
+}
+section#search ul.result .images a.more {
+  color: #ffffff;
+  background: #0167b9;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  bottom: -3px;
+  right: -5px;
+  border-radius: 100%;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -o-border-radius: 100%;
+  text-align: center;
+}
+section#search ul.result .images a.more i {
+  font-size: 14px;
+  color: #ffffff;
+  margin-right: 0;
+}
+section#search ul.result .images img {
+  width: 100%;
+  height: auto;
+  float: left;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+section#search ul.result .rating {
+  float: left;
+  width: 100%;
+  text-align: center;
+}
+section#search ul.result .rating i {
+  font-size: 14px;
+  margin-right: 2px;
+  color: #004579;
+}
+section#search ul.result .name {
+  float: left;
+  width: 70%;
+  padding-left: 15px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+section#search ul.result .opinion {
+  float: left;
+  width: 100%;
+  font-style: italic;
+  color: #717171;
+  font-size: 13px;
+  padding-right: 15px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-top: 5px;
+}
+section#search ul.result .opinion a {
+  display: block;
+  text-align: right;
+}
+section#search ul.result span {
+  display: block;
+  width: 100%;
+  padding: 5px 0;
+}
+section#search ul.result span.title {
+  height: auto;
+  line-height: normal;
+  margin-bottom: 10px;
+}
+section#search ul.result span.title i {
+  float: left;
+}
+section#search ul.result span.specialization {
+  font-style: italic;
+  font-size: 12px;
+  font-weight: 300;
+  color: #717171;
+  padding: 0;
+}
+section#search ul.result span.date {
+  display: inline-block;
+  margin-left: 3px;
+  width: auto;
+  color: #0167b9;
+  font-size: 16px;
+  padding: 0;
+}
+section#search ul.result a.pin {
+  display: inline-block;
+  background: #004579;
+  font-size: 16px;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -o-border-radius: 100%;
+  text-align: center;
+  line-height: 20px;
+  color: #ffffff;
+  margin-left: 5px;
+  text-transform: uppercase;
+}
+section#search ul.calendar {
+  float: left;
+  width: 100%;
+}
+section#search ul.calendar li {
+  display: inline-block;
+  width: 30%;
+  height: 30px;
+  background: #f4f4f4;
+  margin: 0 3px;
+  vertical-align: top;
+  border: 0;
+  text-align: center;
+}
 /* COLOR BLUE */
 .blue section#cabinet span {
   color: #0167b9;
