--- a/elements.css
+++ b/elements.css
@@ -113,8 +113,12 @@
 /* ELEMENTS */
 /* ELEMENTS */
 /* COLUMN */
+.col-8 {
+  width: 100%;
+}
 .col-7 {
   width: 90%;
+  max-width: 1220px;
 }
 .col-6 {
   width: 75%;
@@ -168,7 +172,6 @@
 }
 .btn {
   color: #ffffff;
-  font-weight: 300;
   border: 0;
   border-radius: 5px;
   -moz-border-radius: 5px;
@@ -178,12 +181,61 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin: 2px 0;
+  text-decoration: none;
 }
 .btn i {
   margin-right: 3px;
   color: #ffffff !important;
 }
 /* BUTTON */
+/* CHECKBOX ON / OFF */
+.onoffswitch {
+  position: relative;
+  width: 50px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+  display: none;
+}
+.onoffswitch-label {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  height: 20px;
+  padding: 0;
+  line-height: 20px;
+  border: 1px solid #e6e6e6;
+  border-radius: 20px;
+  background-color: #F4F4F4;
+  transition: background-color 0.3s ease-in;
+}
+.onoffswitch-label:before {
+  content: "";
+  display: block;
+  width: 20px;
+  margin: 0px;
+  background: #0167b9;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 28px;
+  border: 1px solid #e6e6e6;
+  border-radius: 20px;
+  transition: all 0.3s ease-in 0s;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label {
+  background-color: #F4F4F4;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label,
+.onoffswitch-checkbox:checked + .onoffswitch-label:before {
+  border-color: #F4F4F4;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label:before {
+  right: 0px;
+}
+/* CHECKBOX ON / OFF */
 /* WINDOW */
 .window {
   background: #ffffff;
@@ -212,7 +264,7 @@
 }
 #layer .col {
   min-width: 270px;
-  max-width: 400px;
+  max-width: 350px;
 }
 #layer .content {
   display: table;
@@ -252,13 +304,13 @@
   z-index: 2;
   position: absolute;
   top: 2px;
-  left: 4px;
+  left: 3px;
 }
-#layer ul.field {
+#layer #form ul.field {
   float: left;
   width: 100%;
 }
-#layer ul.field li {
+#layer #form ul.field li {
   display: inline-block;
   width: 100%;
   float: left;
@@ -268,14 +320,14 @@
   padding: 2px 0;
   text-align: left;
 }
-#layer ul.field li span {
+#layer #form ul.field li span {
   text-align: left;
   font-weight: 600;
   float: left;
   margin-bottom: 15px;
 }
-#layer ul.field li label,
-#layer ul.field li fieldset {
+#layer #form ul.field li label,
+#layer #form ul.field li fieldset {
   float: left;
   width: 100%;
   text-align: left;
@@ -283,22 +335,22 @@
   color: #717171;
   font-weight: 300;
 }
-#layer ul.field li.center {
+#layer #form ul.field li.center {
   text-align: center;
 }
-#layer ul.field li.horizontal label,
-#layer ul.field li.horizontal fieldset {
+#layer #form ul.field li.horizontal label,
+#layer #form ul.field li.horizontal fieldset {
   width: auto;
   margin-right: 10px;
   display: inline-block;
   float: none;
 }
-#layer li.line {
+#layer #form li.line {
   border-bottom: 1px solid #e6e6e4;
   padding-bottom: 10px !important;
   margin-bottom: 10px;
 }
-#layer input {
+#layer #form input {
   float: left;
   width: 100%;
   padding: 10px;
@@ -309,33 +361,33 @@
   border: 1px solid #e6e6e4;
   color: #717171;
 }
-#layer ul.action {
+#layer #form ul.action {
   text-align: center;
   display: inline-block;
   border: 0;
   margin: auto;
   padding: 5px 0 0;
 }
-#layer ul.action li {
+#layer #form ul.action li {
   display: inline-block;
   float: none;
   width: auto;
   margin: 0 8px;
 }
-#layer ul.action li.block {
+#layer #form ul.action li.block {
   display: inline-block;
   width: 100%;
   margin: 10px 0;
 }
-#layer ul.action li.block a {
+#layer #form ul.action li.block a {
   color: #717171;
   text-decoration: none;
   font-weight: 300;
 }
-#layer ul.action li.block a:hover {
+#layer #form ul.action li.block a:hover {
   color: #000000;
 }
-#layer ul.action li.block .social {
+#layer #form ul.action li.block .social {
   padding: 8px 10px;
   border-radius: 3px;
   -moz-border-radius: 3px;
@@ -344,17 +396,150 @@
   color: #ffffff;
   font-size: 12px;
 }
-#layer ul.action li.block .social i {
+#layer #form ul.action li.block .social i {
   margin: 5px;
 }
-#layer ul.action li.block a.facebook {
+#layer #form ul.action li.block a.facebook {
   background: #3765a3;
+  border-bottom: 2px solid #2a4e80;
 }
-#layer ul.action li.block a.google {
+#layer #form ul.action li.block a.google {
   background: #dc4e42;
+  border-bottom: 2px solid #a93c33;
 }
-#layer ul.action .close-window {
+#layer #form ul.action .close-window {
   background: #717171;
+}
+#layer #calendar {
+  padding: 0 0 10px;
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+}
+#layer #calendar .close {
+  color: #ffffff;
+}
+#layer #calendar .close:before {
+  background: #0167b9;
+}
+#layer #calendar .date {
+  float: left;
+  width: 100%;
+  background: #0167b9;
+  padding: 15px 20px;
+  border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  -webkit-border-radius: 4px 4px 0 0;
+  -o-border-radius: 4px 4px 0 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+#layer #calendar .date span {
+  display: block;
+  text-align: left;
+}
+#layer #calendar .date .year {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 36px;
+}
+#layer #calendar .date .month,
+#layer #calendar .date .day {
+  color: #ffffff;
+  padding: 0 !important;
+}
+#layer #calendar .date .month {
+  font-size: 22px;
+}
+#layer #calendar .date .day {
+  font-weight: 300;
+}
+#layer #calendar .month {
+  float: left;
+  width: 100%;
+  padding: 20px 0;
+}
+#layer #calendar .month span {
+  margin: 0 20px;
+  top: -3px;
+  position: relative;
+}
+#layer #calendar .month a {
+  text-decoration: none;
+  color: #0167b9;
+}
+#layer #calendar .month i {
+  font-size: 30px;
+}
+#layer #calendar .days {
+  float: left;
+  width: 100%;
+  padding: 0 15px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+#layer #calendar .days ul {
+  float: left;
+  width: 100%;
+}
+#layer #calendar .days ul li {
+  display: table;
+  width: 14.2%;
+  float: left;
+  padding: 10px 0;
+  font-size: 14px;
+}
+#layer #calendar .days ul .day {
+  color: #0167b9;
+}
+#layer #calendar .days ul a {
+  text-decoration: none;
+  color: #2f2f2f;
+  min-width: 25px;
+  display: inline-block;
+  position: relative;
+}
+#layer #calendar .days ul a span {
+  position: relative;
+  z-index: 1;
+}
+#layer #calendar .days ul a span:hover {
+  color: #ffffff;
+}
+#layer #calendar .days ul a:hover {
+  color: #ffffff;
+}
+#layer #calendar .days ul a:hover:before {
+  content: '';
+  background: #0167b9;
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  top: -3px;
+  left: 0;
+  z-index: 0;
+  border-radius: 100%;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -o-border-radius: 100%;
+}
+#layer #calendar .days ul .active {
+  color: #ffffff;
+}
+#layer #calendar .days ul .active:before {
+  content: '';
+  background: #0167b9;
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  top: -3px;
+  left: 0;
+  z-index: 0;
+  border-radius: 100%;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -o-border-radius: 100%;
 }
 /* WINDOW */
 /* COLOR */
